# messenger

./: CMakeLists.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  console_controller.cpp  console_controller.h  main.cpp  read_callback_generator.cpp  read_callback_generator.h
src/client/base/: iapp_state.h  icommand.h  icommand_handler.h  icontact_list.h  iio_object.h  ivalidator.h
src/protocol/: CMakeLists.txt  messages.proto  root.proto  users.proto
src/protocol/proto_files/: contacts.proto  control.proto
src/server/: CMakeLists.txt  main.cpp
